@@ -12158,10 +12158,30 @@ input[type=range]::-moz-range-track {
   border-color: #ccc;
 }
 
-/* Cambia il colore del pallino quando lo switch è attivato */
 .form-check-input:checked[type=checkbox] {
   background-color: #ff0000;
   border-color: #ff0000;
+}
+
+/* table for the car details */
+.car-details-table {
+  border-radius: 12px;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+}
+
+.car-details-table .table-striped-columns {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.command-button {
+  margin-bottom: 10px;
+  align-items: center;
+  width: 300px;
 }
 
 /*# sourceMappingURL=style.css.map */
