@@ -288,3 +288,24 @@ input[type=range]::-moz-range-track {
     background-color: $secondary;
     border-color: $secondary; 
 }
+
+/* table for the car details */
+.car-details-table{
+    border-radius: 12px;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+
+.car-details-table .table-striped-columns{
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.command-button{
+    margin-bottom: 10px;
+    align-items: center;
+    width: 300px;
+}
