@@ -184,16 +184,77 @@
 
         <div class="container mb-4">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 mb-3">
                     <h2>Dettagli macchina</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-5 d-flex align-items-center">
+                <div class="col-md-3 d-flex align-items-start">
                     <img src="../../img/variable/fiat-panda.jfif">
                 </div>
-                <div class="col-md-7 d-flex align-items-center">
-
+                <div class="col-md-5 d-flex align-items-center car-details-table roundend overflow-hidden border">    
+                    <table class="table table-striped-columns">
+                        <tr>
+                            <th scope="row">Marca</th>
+                            <td>Fiat</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Modello</th>
+                            <td>Panda</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Potenza</th>
+                            <td>85KW</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Cilindrata</th>
+                            <td>1200cc</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Prezzo</th>
+                            <td>12000,00€</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Alimentazione</th>
+                            <td>Benzina</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Autonomia</th>
+                            <td>300km con un pieno</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Colore macchina</th>
+                            <td><div style="width: 16px; height: 16px; background-color: #ff0000; border: 1px solid #ccc;"></div></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Posti</th>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Porte</th>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Lunghezza</th>
+                            <td>367cm</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Optional</th>
+                            <td>
+                                <ul>
+                                    <li>Optional 1</li>
+                                    <li>Optional 2</li>
+                                    <li>Optional 3</li>
+                                    <li>Optional 4</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-lg-4 d-flex flex-column align-items-center justify-content-center">
+                    <button type="button" class="btn btn-secondary command-button">Aggiungi al carrello</button><br>
+                    <button type="button" class="btn btn-secondary command-button">Aggiungi alla lista dei desideri</button><br>
+                    <button type="button" class="btn btn-secondary command-button">Torna indietro</button>
                 </div>
             </div>
         </div>
